# ai-dev

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  LICENSE.md  README.md  alembic.ini  debug_mm_ws.py  docker-compose.yaml  lll-2.txt  logs_new.txt  pyproject.toml
config/: agents.yaml  local.example.yaml  mappings.yaml  notifications.yaml  repositories.yaml
config/prompts/: analyst.md  answer_classifier.md  clarification_agent.md  clarification_planner.md  clarification_tool_picker.md  clarification_validator.md  counter_answerer.md  dev.md  stakeholder_resolver.md  thread_responder.md
config/rules/: dev-bellingshausen-backend.md  dev-bellingshausen-frontend.md
docs/: ARCHITECTURE.md
mattermost-thread-reader/: SKILL.md
mattermost-thread-reader/scripts/: fetch_thread_api.js
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_bus_durable_subscribers_and_lease.py  0003_plans_active_index.py  0004_fragment_files_json.py  0005_mr_pending_comment_ids.py  0006_mr_autofix_escalation_root.py  0007_timestamp_to_timestamptz.py  0008_ticket_resets.py  0009_task_recovery_attempts.py  0010_mr_infra_retries.py  0011_autofix_restart_marker.py
scripts/: verify_token_clone.py
src/virtual_dev/: __init__.py
tests/: conftest.py
tests/integration/: test_alembic.py
tests/unit/: test_activity_route.py  test_agent_runner.py  test_agent_trace.py  test_agents_model_resolution.py  test_analyst.py  test_analyst_inbox.py  test_analyst_session_repo.py  test_analyst_to_dev_handoff.py  test_answer_classifier.py  test_bus_postgres_reclaim.py  test_clarification_agent.py  test_clarification_orchestrator.py  test_clarification_planner.py  test_clarification_repo.py  test_communicator.py  test_communicator_write.py  test_component_routing.py  test_counter_answerer.py  test_dev_agent.py  test_dev_inbox.py  test_devops.py  test_dm_user_whitelist.py  test_gitlab_vcs_local.py  test_goal_full_cycle.py  test_goal_orchestrator.py  test_goal_repo.py  test_health_tracker.py  test_hybrid_chat.py  test_in_memory_chat.py  test_injection_filter.py  test_injection_filter_and_jira_datetime.py  test_jira_resilience.py  test_jira_tracker.py  test_lifespan_shutdown.py  test_link_extractor.py  test_logging_redaction.py  test_mm_attachment_in_fragment.py  test_mm_catchup.py  test_mm_thread_listener.py  (+24 more)
(+167 files in other folders)
