[project]
name = "virtual-dev"
version = "0.1.0"
description = "Virtual AI developer for the DataMining team (2GIS)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "DataMining Team, 2GIS" }]

dependencies = [
    # Core
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "anyio>=4.6",

    # LLM / Agents
    #
    # Claude Agent SDK wraps the `claude` CLI (Claude Code) in a subprocess
    # and reuses the logged-in Claude Max session. No API key required.
    # Intentionally NOT depending on the `anthropic` SDK directly — the bot
    # runs on the user's Max subscription, not on API credits.
    "claude-agent-sdk>=0.1.0",

    # Task tracker / VCS / Chat / KB
    "atlassian-python-api>=4.0",
    "python-gitlab>=5.0",
    "mattermostdriver>=7.3",

    # Web dashboard
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",

    # CLI
    "typer>=0.13",
    "rich>=13.9",

    # DB
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "greenlet>=3.0",    # required by SQLAlchemy async on aarch64-darwin

    # Misc
    "httpx>=0.28",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]
virtual-dev = "virtual_dev.presentation.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virtual_dev"]

# -------- Tooling --------

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "RUF",
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
